<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiltrosActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:contentDescription="Logo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvTituloApplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/imageLogo"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Rutas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDistanciaFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Distancia"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rango"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:valueFrom="0"
        android:valueTo="200"
        app:labelBehavior="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinDistancia"
        app:values="@array/initial_slider_values" />

    <TextView
        android:id="@+id/tvMinDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="50 Km"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistanciaFiltros" />

    <TextView
        android:id="@+id/tvMaxDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="150 Km"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMinDistancia" />

    <TextView
        android:id="@+id/tvDificultadFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Dificultad"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rango" />

    <CheckBox
        android:id="@+id/chBoxFacil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Fácil"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDificultadFiltros" />

    <CheckBox
        android:id="@+id/chBoxModerado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moderado"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/chBoxDificil"
        app:layout_constraintStart_toEndOf="@+id/chBoxFacil"
        app:layout_constraintTop_toTopOf="@+id/chBoxFacil" />

    <CheckBox
        android:id="@+id/chBoxDificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Difícil"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chBoxModerado" />

    <TextView
        android:id="@+id/tvDesplazamientoFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Desplazamiento"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chBoxFacil" />

    <CheckBox
        android:id="@+id/chBoxAPie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="A pie"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesplazamientoFiltro" />

    <CheckBox
        android:id="@+id/chBoxBicicleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:text="Bicicleta"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/chBoxCoche"
        app:layout_constraintStart_toEndOf="@+id/chBoxAPie"
        app:layout_constraintTop_toTopOf="@+id/chBoxAPie" />

    <CheckBox
        android:id="@+id/chBoxCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Coche"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chBoxBicicleta" />

    <Button
        android:id="@+id/aplicarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Aplicar filtros"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelarFiltro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/verde_suave"
        android:text="Cancelar filtros"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>