<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RutasFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:contentDescription="Logo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvTituloApplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/imageLogo"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Rutas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvNoHayRutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btFiltros" />

    <SearchView
        android:id="@+id/svRutas"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:iconifiedByDefault="false"
        android:queryHint="Buscar..."
        app:layout_constraintEnd_toStartOf="@+id/btFiltros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/btFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Filtros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/svRutas"
        app:layout_constraintTop_toTopOf="@id/svRutas" />



</androidx.constraintlayout.widget.ConstraintLayout>
